refactor: uso de  toList - Importar